# Arcane-OCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: ocr_config.yaml
docs/: DEVELOPER.md  OPTIMIZATION_GUIDE.md  PAGE_COMBINING.md  PIPELINE_SETUP.md  USERGUIDE.md
public/: freq.txt
scripts/: download_models.sh  install_hailo_runtime.sh  run_ocr.sh  setup_venv.sh
setup-files/: Installation-Instructions.md  hailo_tappas_core_python_binding-5.2.0-py3-none-any.whl
src/arcane_ocr/: __init__.py  combine_pages.py  hailo_inference.py  ocr_utils.py  pipeline.py  post_inference_orchestrator.py
